Changed file extension

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 				<div class="col-12 col-md-6 col-lg-4">
 					<h5 class="text-center">1-1. User Registration</h5>
 					<p class="text-center">Registering Lalisa Manoban with the following information:</p>
-					<img src="./images/1-1.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/1-1.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<h5 class="text-center">1-2. User Registration</h5>
 					<p class="text-center">Registering Jisoo Kim with the following information:</p>
-					<img src="./images/1-2.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/1-2.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-12 col-lg-4">
 					<h5 class="text-center">2. Retrieving All Users</h5>
 					<p class="text-center">Retrieving all users who are registered.</p>
-					<img src="./images/2.png" class="img-fluid cardPics mx-auto d-block">
+					<img src="./images/2.jpg" class="img-fluid cardPics mx-auto d-block">
 				</div>
 			</div>
 
@@ -72,17 +72,17 @@
 				<div class="col-12 col-md-6 col-lg-4">
 					<h5 class="text-center">3. User Authentication</h5>
 					<p class="text-center">Generating a bearer token for the logging in user.</p>
-					<img src="./images/3.png" class="img-fluid cardPics mx-auto d-block">
+					<img src="./images/3.jpg" class="img-fluid cardPics mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<h5 class="text-center">4. Admin Registration</h5>
 					<p class="text-center">Registering Lalisa Manoban as an Administrator.</p>
-					<img src="./images/4.png" class="img-fluid cardPics mx-auto d-block">
+					<img src="./images/4.jpg" class="img-fluid cardPics mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-12 col-lg-4">
 					<h5 class="text-center">5. Retrieving Specific User</h5>
 					<p class="text-center">Retrieving Lalisa Manoban with "isAdmin: true"</p>
-					<img src="./images/5.png" class="img-fluid cardPics mx-auto d-block">
+					<img src="./images/5.jpg" class="img-fluid cardPics mx-auto d-block">
 				</div>
 			</div>
 
@@ -100,17 +100,17 @@
 				<div class="col-12 col-md-6 col-lg-4">
 					<h5 class="text-center">6. Create Product</h5>
 					<p class="text-center">Creating a product with the following information:</p>
-					<img src="./images/6.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/6.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<h5 class="text-center">7. Retrive All Active Products</h5>
 					<p class="text-center">Retrieving all active products in the database.</p>
-					<img src="./images/7.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/7.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-12 col-lg-4">
 					<h5 class="text-center">8. Update Product</h5>
 					<p class="text-center">Updating the description with the sizes available.</p>
-					<img src="./images/8.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/8.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 			</div>
 
@@ -119,17 +119,17 @@
 				<div class="col-12 col-md-6 col-lg-4">
 					<h5 class="text-center">9. Archive Product</h5>
 					<p class="text-center">Archiving the product. Setting it to: "isActive: false".</p>
-					<img src="./images/9.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/9.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<h5 class="text-center">10. Retrieve a Product</h5>
 					<p class="text-center">Retrieving a single product. In this case, the one we archived.</p>
-					<img src="./images/10.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/10.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-12 col-lg-4">
 					<h5 class="text-center">11. Retrieve All Active Products</h5>
 					<p class="text-center">Jordan 3 was archived; Jordan 1 and Jordan 2 is the one being returned.</p>
-					<img src="./images/11.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/11.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 			</div>
 
@@ -148,15 +148,15 @@
 			<div class="row mt-3 mb-5">
 				<div class="col-12 col-md-6 col-lg-4">
 					<p class="text-center">i. Creating an order for non-admin/regular users/customers.</p>
-					<img src="./images/12-1.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/12-1.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<p class="text-center">ii. As we have limited stocks, it will check the quantity ordered versus stocks.</p>
-					<img src="./images/12-2.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/12-2.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-12 col-lg-4">
 					<p class="text-center">iii. all information is true, it will now proceed the order.</p>
-					<img src="./images/12-3.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/12-3.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 			</div>
 
@@ -164,17 +164,17 @@
 				<div class="col-12 col-md-6 col-lg-4">
 					<h5 class="text-center">13. Retrieve All Active Product</h5>
 					<p class="text-center">When a product is ordered, the order details will be attach to the product.</p>
-					<img src="./images/13.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/13.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<h5 class="text-center">14. Retrieve User's Order</h5>
 					<p class="text-center">The order details are returned for the specific user.</p>
-					<img src="./images/14.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/14.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-12 col-lg-4">
 					<h5 class="text-center">15. Retrieve All Orders</h5>
 					<p class="text-center">All orders of users will be returned.</p>
-					<img src="./images/15.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/15.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 			</div>
 
@@ -191,12 +191,12 @@
 				<div class="col-12 col-md-6">
 					<h5 class="text-center">16. Feedbacks/Complaints</h5>
 					<p class="text-center">A feature for the user's feedbacks or complaints.</p>
-					<img src="./images/16.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/16.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 				<div class="col-12 col-md-6">
 					<h5 class="text-center">17. Retrieve All Feedbacks/Complaints</h5>
 					<p class="text-center">Retrieving all feedbacks and complaints.</p>
-					<img src="./images/17.png" class="cardPics img-fluid mx-auto d-block">
+					<img src="./images/17.jpg" class="cardPics img-fluid mx-auto d-block">
 				</div>
 			</div>
 		</div>
